# brainfuck

./: .gitignore  CMakeLists.txt  readme.md
examples/: addition.bf
extra/: boilerplate.c
include/: loader.hpp  output.hpp  transpiler.hpp
src/: extra_logic.cpp  loader.cpp  main.cpp  output.cpp  transpiler.cpp
